--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ header .logo img{
     margin-bottom: -10px;
     padding-right: 20px;
 }
+/* HEADER PENCARIAN */
+/* header .pencarian{
+    padding-left: 200px;
+} */
 /* HEADER MENU */
 header .menu a{
     position: relative;
@@ -128,7 +132,7 @@ section{
     margin-right: 50px;
     margin-left: 150px;
 }
-.home .content .content-right .btn-right a button{
+/* .home .content .content-right .btn-right a button{
     font-family: 'Poppins', sans-serif;
     padding: 10px;
     padding-left: 80px;
@@ -140,22 +144,21 @@ section{
     font-weight: bolder;
     color: #ffffff;
     text-decoration: none;
-}
+} */
 .home .content .content-right .btn a button:hover{
     transition: 0.5s;
-    background-color: #f1b1b1;
+    background-color: #FFE3E3;
     border:5px solid #f67280;
-    /* border-radius: 20px; */
     color: black;
 
 }
-.home .content .content-right .btn-right a button:hover{
+/* .home .content .content-right .btn-right a button:hover{
     transition: 0.5s;
     background-color: #f1b1b1;
     border:5px solid #61da75;
-    /* border-radius: 20px; */
+    border-radius: 20px; 
     color: black;
-}
+} */
 
 .list-lagu {
     display: flex;
@@ -247,45 +250,66 @@ section{
 .top-artist .album-artis{
     display: flex;   
     width: max-content;
-    gap: 1rem;
+    gap: 1.3rem;
 }
 .top-artist .album-artis img{
-    padding-bottom: 10px;
     width: 250px;
+    border-radius: 15px;
+    box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 .top-artist .album-artis .nama-artis{
     text-align: center;
     font-weight: bolder;
     padding-bottom: 20px;
+    padding-top: 10px;
 }
 
 .top-artist .album-scroll{
     width: 100% ;
     overflow-x: scroll;
-    scrollbar-color: red;
 }
 /* .album-scroll::-webkit-scrollbar{
     display: none;
 } */
 .aldi-taher{  
-    width: 100%;  
     margin-top: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #d8d8d8 ;
-    border: 20px solid #d8d8d8;
+    background-color: #FFE3E3 ;
+    border: 20px solid #FFE3E3;
     border-radius: 20px;
 
 }
-.aldi-taher img{
+.aldi-taher .aldi-kiri img{
     border-radius: 20px;
-    box-shadow: 0 0.5rem 1.5rem #292929;    
+    box-shadow: 0 5px 5px 5px rgba(13, 110, 253, 0.2);
     margin-right: 30px;
     margin-left: 30px;
+    width: 300px;
 }
-.aldi-taher p{
-    
+.aldi-taher .aldi-kanan p{
+    font-size: 1.5rem;
+    text-align: justify;
+    margin-right: 50px;
+}
+.baskara{   
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    background-color: #FFE3E3 ;
+    border: 20px solid #FFE3E3;
+    border-radius: 20px;
+
+}
+.baskara .baskara-kiri img{
+    border-radius: 20px;
+    box-shadow: 0 5px 5px 5px rgba(13, 110, 253, 0.2);
+    margin-right: 30px;
+    margin-left: 30px;
+    width: 300px;
+}
+.baskara .baskara-kanan p{
     font-size: 1.5rem;
     text-align: justify;
     margin-right: 50px;
