--- a/style.css
+++ b/style.css
@@ -40,9 +40,42 @@ header .logo img{
     padding-right: 20px;
 }
 /* HEADER PENCARIAN */
-/* header .pencarian{
-    padding-left: 200px;
-} */
+.search-bar {
+    display: flex;
+    align-items: center;
+    background-color: #f1b1b1;
+    border-radius: 35px;
+    padding: 10px 15px;
+    width: 650px;
+}
+.search-bar i {
+    color: #fff;
+    margin-right: 10px;
+}
+.search-bar input {
+    background: none;
+    border: none;
+    color: #fff;
+    flex-grow: 1;
+    font-size: 16px;
+    outline: none;
+}
+.search-bar input::placeholder {
+    color: #fff;
+}
+.search-bar .home-icon {
+    /* background-color: #f67280; */
+    border-radius: 50%;
+    padding: 10px;
+    margin-right: 10px;
+}
+.search-bar .home-icon i {
+    color: #fff;
+}
+.search-bar .cart-icon {
+    color: #fff;
+    margin-left: 10px;
+}
 /* HEADER MENU */
 header .menu a{
     position: relative;
@@ -111,13 +144,8 @@ section{
     text-align: justify;
     font-size: 1.8rem;
 }
-.home .content .content-right .tombol{
-    text-decoration: none; 
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-}
 .home .content .content-right .btn a button{
+   align-items: center ;
     font-family: 'Poppins', sans-serif;
     padding: 10px;
     padding-left: 37px;
@@ -129,8 +157,8 @@ section{
     font-weight: bolder;
     color: #ffffff;
     text-decoration: none;
-    margin-right: 50px;
-    margin-left: 150px;
+    /* margin-right: 50px;
+    margin-left: 150px; */
 }
 /* .home .content .content-right .btn-right a button{
     font-family: 'Poppins', sans-serif;
@@ -255,7 +283,7 @@ section{
 .top-artist .album-artis img{
     width: 250px;
     border-radius: 15px;
-    box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 5px 8px 5px 5px rgba(0, 0, 0, 0.2);
 }
 .top-artist .album-artis .nama-artis{
     text-align: center;
@@ -279,11 +307,12 @@ section{
     background-color: #FFE3E3 ;
     border: 20px solid #FFE3E3;
     border-radius: 20px;
+    margin-bottom: 40px;
 
 }
 .aldi-taher .aldi-kiri img{
     border-radius: 20px;
-    box-shadow: 0 5px 5px 5px rgba(13, 110, 253, 0.2);
+    box-shadow: 5px 8px 5px 5px rgba(0, 0, 0, 0.2);
     margin-right: 30px;
     margin-left: 30px;
     width: 300px;
@@ -304,7 +333,7 @@ section{
 }
 .baskara .baskara-kiri img{
     border-radius: 20px;
-    box-shadow: 0 5px 5px 5px rgba(13, 110, 253, 0.2);
+    box-shadow: 5px 8px 5px 5px rgba(0, 0, 0, 0.2);
     margin-right: 30px;
     margin-left: 30px;
     width: 300px;
