--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header .logo img{
     background-color: #f1b1b1;
     border-radius: 35px;
     padding: 10px 15px;
-    width: 650px;
+    width: 40rem;
 }
 .search-bar i {
     color: #fff;
