--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
+
+*{
+    margin: 0; padding: 0;
+    box-sizing: border-box;
+    outline: none; border: none;
+    text-transform: capitalize;
+    text-decoration: none;
+    transition: all 200ms ease-out;
+    scroll-behavior: smooth;
+    }
 html{
     scroll-behavior: smooth;
     overflow-x: hidden;
     font-size: 62.5%s;
+}
+
+.heading{
+    font-size: 2rem;
+    margin-bottom: 2rem;
 }
 /* CSS HEADER */
 body{
@@ -11,7 +26,7 @@ body{
 }
 header{
     background: #f67280;
-    padding: 1.5rem ;
+    padding: 1.5rem 3.5rem;
     position: fixed;
     top: 0;
     left: 0;
@@ -21,8 +36,6 @@ header{
     justify-content: space-between;
     display: flex;
     z-index: 1;
-    padding-left: 100px;
-    padding-right: 100px;
 }
 /* HEADER LOGO */
 header .logo{
@@ -32,42 +45,37 @@ header .logo{
     font-size: 1.4rem;
     color: black;
     text-decoration: none; 
-    letter-spacing: 1px;
+    letter-spacing: 0.1rem;
 }
 header .logo img{
     width: 2rem;
     height: 2rem;
-    margin-bottom: -10px;
-    padding-right: 20px;
+    margin-bottom: -.65rem;
+    margin-right: .5rem;
 }
 /* HEADER PENCARIAN */
 .search-bar {
     display: flex;
     align-items: center;
     background-color: #f1b1b1;
-    border-radius: 35px;
-    padding: 10px 15px;
+    border-radius: 3.5rem;
+    padding: 1rem 1.5rem;
     width: 45%;
 }
 .search-bar i {
     color: #fff;
-    margin-right: 10px;
+    margin-right: 1rem;
 }
 .search-bar input {
     background: none;
     border: none;
     color: #fff;
     flex-grow: 1;
-    font-size: 16px;
+    font-size: 1rem;
     outline: none;
 }
 .search-bar input::placeholder {
     color: #fff;
-}
-.search-bar .home-icon {
-    border-radius: 50%;
-    padding: 10px;
-    margin-right: 10px;
 }
 .search-bar .home-icon i {
     color: #fff;
@@ -85,9 +93,10 @@ header .menu a{
     font-weight: bold;
     padding: 8px;
     margin-right: 15px;
+    border-bottom: .4rem solid #f67280;
 }
 header .menu a:hover{
-    border-bottom: 2px solid white;
+    border-bottom: .4rem solid white;
     color: rgb(255, 255, 255);
     border-radius: 7px 20px 7px 20px;
     filter: drop-shadow(0 0 15px #f1b1b1) ;
@@ -105,9 +114,9 @@ section{
     align-items: center;
     flex-wrap: wrap;
     background: #FFE3E3;
-    margin: 5%;
+    margin: 8rem 5rem 0 5rem;
     border-radius: 40px;
-    margin-top: 8.5%;
+    min-height: 35vh;
     filter: drop-shadow(0 0 20px rgb(255, 0, 0)); 
 }
 .home .content{
@@ -128,7 +137,7 @@ section{
 }
 .home .content .content-right{
     width: 55%;
-    margin-top: -8%;
+    margin-top: 2.5rem;
 }
 .home .content .content-right h1{
     text-transform: uppercase;
@@ -140,15 +149,14 @@ section{
     font-size: 1.8rem;
 }
 .home .content .content-right .btn a button{
+    margin-top: 2rem;
    align-items: center ;
     font-family: 'Poppins', sans-serif;
-    padding: 10px;
-    padding-left: 37px;
-    padding-right: 37px;
+    padding: 1rem 2rem;
     background-color: #f67280;
-    border:5px solid #f67280;
-    border-radius: 28px;
-    font-size: 1.3rem;
+    border:.5rem solid #f67280;
+    border-radius: 3rem;
+    font-size: 1.5rem;
     font-weight: bolder;
     color: #ffffff;
     text-decoration: none;
@@ -156,7 +164,7 @@ section{
 .home .content .content-right .btn a button:hover{
     transition: 0.5s;
     background-color: #FFE3E3;
-    border:5px solid #f67280;
+    border:.5rem solid #f67280;
     color: black;
 }
 
@@ -167,30 +175,29 @@ section{
     justify-content: space-between;
 }
 .album-cover {
+    flex: 30rem 1 1;
     display: flex;
     align-items: center;
-    width: 47%;
-    margin-bottom: 10px;
-    padding: 10px;
+    width: 40rem;
+    margin: 1rem;
+    padding: .7rem;
     background-color: #f67280;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: .8rem;
+    box-shadow: 0 .2rem .3rem rgba(0, 0, 0, 0.1);
 }
-.album-cover.selected {
-    background-color: #e0e0e0;
-}
+
 .album-cover img {
-    width: 100px;
-    height: 100px;
-    border-radius: 4px;
-    margin-right: 10px;
+    width: 6rem;
+    height: 6rem;
+    border-radius: .7rem;
+    margin-right: .8rem;
 }
 .info-lagu {
     display: flex;
     flex-direction: column;
 }
 .judul-lagu {
-    font-size: 16px;
+    font-size: 1.2rem;
     font-weight: bold;
     text-decoration: none;
 }
@@ -202,36 +209,34 @@ section{
     text-decoration: underline;
 }
 .artis-lagu {
-    font-size: 14px;
+    font-size: 1.1rem;
     color: #d8d8d8;
 }
 
 /* MUSIC PLAYER */
 .musik{
     position: relative;
-    left: 25%;
-    margin-top: 50px;
-    padding: 80px;
-    width: 35%;
+    margin: 3rem 20rem;
+    padding: 6rem 3rem;
     background: linear-gradient(#ecc4c4 40%,#FBA1B7, #f67280);
     align-items: center;
-    border-radius: 50px;
-    box-shadow: 5px 8px 5px 5px #ff2f447c;
+    border-radius: 2rem;
+    box-shadow: .5rem .9rem .5rem .5rem #ff2f447c;
 }
 .music-btn {
     background-color: #f67280;
     border-radius: 50%;
     color: white;
-    padding: 20px 20px 20px 20px;
-    font-size: 30px;
+    padding: 1.75rem;
+    font-size: 2.5rem;
     border: none;
     cursor: pointer;
-    width: 75px;
-    height: 75px;
+    width: 3.5rem;
+    height: 3.5rem;
   }
 .controls {
     display: flex;
-    gap: 50px;
+    gap: 4rem;
     justify-content: center;
   }
   
@@ -240,30 +245,30 @@ section{
   }
   
   .playing {
+    padding-bottom: 2rem;
     text-align: center;
   }
    .musik .bar-music .bar-proses{
     width: 30%;
     background: black;
     z-index: 1;
+    border-radius: 1rem;
+    margin-top: 2rem;
+    height: .8rem;
   }
   .musik .bar-music{
-    border-radius: 10px;
-    margin-top: 30px;
-    align-items: center;
+    border-radius: 1rem;
+    margin-top: 2rem;
     width: 100%;
-    height: 10px;
+    height: .8rem;
     background-color: white;
-    position: relative;
   }
  
-  .musik h2{
-    padding-top: 5px;
-  }
+
 
 /* SECTION TOP ARTIST */
 .top-artist{
-    padding-bottom: 20px;
+    padding-bottom: 2rem;
 }
 .top-artist .album-artis{
     display: flex;   
@@ -271,15 +276,15 @@ section{
     gap: 1.3rem;
 }
 .top-artist .album-artis img{
-    width: 250px;
-    border-radius: 15px;
-    box-shadow: 5px 8px 5px 5px rgba(0, 0, 0, 0.2);
+    width: 15rem;
+    border-radius: 1.5rem;
+    box-shadow: .3rem .5rem .3rem .3rem rgba(0, 0, 0, 0.2);
 }
 .top-artist .album-artis .nama-artis{
     text-align: center;
     font-weight: bolder;
-    padding-bottom: 20px;
-    padding-top: 10px;
+    padding-bottom: 2rem;
+    padding-top: 1rem;
 }
 .top-artist .album-scroll{
     width: 100% ;
@@ -295,9 +300,9 @@ section{
 .aldi-taher{  
     display: flex;
     align-items: center;
-    padding: 50px 30px 50px 20px;
+    padding: 5rem 3rem 5rem 2rem;
     background: #FFE3E3;
-    border-radius: 24px;
+    border-radius: 2rem;
     margin-top: 1rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
@@ -305,41 +310,42 @@ section{
 .aldi-taher p{
     font-size: 1.5rem;
     text-align: justify;
-    margin-right: 50px;
+    margin-right: 5rem;
 }
 .aldi-taher img{
-    height: 300px;
+    height: 15rem;
     object-fit: cover;
-    margin-left: -60px;
-    margin-right: 30px;
-    border-radius: 20px;
-    box-shadow: 5px 8px 5px 5px rgba(0, 0, 0, 0.2);
+    margin-left: -6rem;
+    margin-right: 3rem;
+    border-radius: 1rem;
+    box-shadow: .3rem .5rem .3rem .3rem rgba(0, 0, 0, 0.2);
 }
 /* BASKARA */
 .baskara{  
     display: flex;
     align-items: center;
-    padding: 50px 30px 50px 20px;
+    padding: 5rem 3rem 5rem 2rem;
     background: #FFE3E3;
-    border-radius: 24px;
+    border-radius: 2rem;
     margin-top: 1rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
 }
 .baskara p{
+
+    line-height: 1.5    ;
     font-size: 1.5rem;
     text-align: justify;
-    margin-right: 50px;
+    margin-right: 5rem;
 }
 .baskara img{
-    height: 300px;
+    height: 15rem;
     object-fit: cover;
-    margin-left: -60px;
-    margin-right: 30px;
-    border-radius: 20px;
-    box-shadow: 5px 8px 5px 5px rgba(0, 0, 0, 0.2);
+    margin-left: -6rem;
+    margin-right: 3rem;
+    border-radius: 1rem;
+    box-shadow: .3rem .5rem .3rem .3rem rgba(0, 0, 0, 0.2);
 }
-  
 /* FOOTER SECTION */
   .footer{
     display: block;
@@ -347,13 +353,14 @@ section{
     justify-content: center;
     align-items: center;
     background-color: #ffffff;
-    border-radius: 30px;
-    margin: 20px;
-    padding-top: 50px;
+    border-radius: 3rem;
+    margin: 2rem;
+    padding-top: 3rem;
 }
 .footer .box-container{
     display: flex;
-    grid-template-columns: repeat(auto-fit, minxmax(22rem, 3fr));
+    flex: 30rem 1 1;
+    flex-wrap: wrap;
     gap: 5rem;
     width: 100%;
     margin-bottom: 2rem;
@@ -375,9 +382,109 @@ section{
     padding: .3rem 0;
     text-transform: none;
     text-decoration: none;
-    line-height: 30px;
+    line-height: 2;
 }
 .footer .box-container .box a:hover{
-    padding-left: 10px;
+    padding-left: .4rem;
     transition: 0.4s;
+}
+
+
+
+
+
+
+
+
+
+
+
+header #toggler{
+    display: none;
+}
+header .fa-bars{
+    font-size: 2rem;
+    color: #323643;
+    cursor: pointer;
+    display: none;
+}
+
+
+
+@media (max-width: 991px){
+
+    html{
+        font-size: 55%;
+    }
+    header{
+        padding: 1.8rem;
+    }
+    section{
+        padding: 2rem;
+    }
+}
+
+@media (max-width: 768px){
+
+    header .fa-bars{
+        display: block;
+    }
+    header .menu{
+        position: absolute;
+        top: 99%; left: 0; right: 0;
+        background: #f67280;
+        border-bottom: .2rem solid #323643;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+    header #toggler:checked ~ .menu{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100% );
+    }
+    header .menu a{
+        margin: 1.5rem;
+        padding: 1.5rem;
+        display: block;
+    }
+
+    .search-bar{
+        position: absolute;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+
+    }
+
+    .baskara{
+        flex-wrap: wrap;
+        position: relative;
+    }
+    .baskara img{
+        align-content: center;
+        margin: -8rem 0 0 20rem;
+        border-radius: 50%;
+    }
+    .baskara p{
+        margin: 1.3rem;
+    }
+    .baskara h1{
+        text-align: center;
+        padding-top: 2rem;
+        margin-left: 20rem;
+    }
+    .aldi-taher{
+        margin-top: 5rem;
+        flex-wrap: wrap;
+        position: relative;
+    }
+    .aldi-taher img{
+        position: relative;
+        align-content: center;
+        margin: -8rem 0 0 20rem;
+        border-radius: 50%;
+    }
+    .aldi-taher p{
+        margin: 1.3rem;
+    }
+    .aldi-taher h1{
+        text-align: center;
+        padding-top: 2rem;
+        margin-left: 24rem;
+    }
 }
